Senior_Project/src/senior/project/test/server/errors/ServerInvalidDateException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidDateException extends Exception {

  public ServerInvalidDateException(String msg) {
    super(msg);
  }
}
